--- a/docker/requirements.txt
+++ b/docker/requirements.txt
@@ -7,3 +7,4 @@ pydantic>=2.5.0
 python-multipart>=0.0.6 
 --extra-index-url https://download.pytorch.org/whl/cu121
 torch==2.1.1+cu121
+psutil>=5.9.5
