--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     build:
       context: ..
       dockerfile: docker/dockerfile
-    # image: normalized-semantic-chunker:latest # Image name better defined in specific services
+    image: normalized-semantic-chunker:latest 
     restart: unless-stopped
     volumes:
       - normalized_semantic_chunker_models:/app/models
@@ -14,6 +14,20 @@ services:
     environment:
       - TOKENIZERS_PARALLELISM=false
       - LOG_LEVEL=INFO
+
+      # Cache and Threading Optimizations
+      - MODEL_CACHE_TIMEOUT=${MODEL_CACHE_TIMEOUT:-3600}
+      - OMP_NUM_THREADS=${OMP_NUM_THREADS:-4}
+      - MKL_NUM_THREADS=${MKL_NUM_THREADS:-4}
+      
+      # GPU Memory Optimizations
+      - PYTORCH_CUDA_ALLOC_CONF=max_split_size_mb:512
+      - CUDA_LAUNCH_BLOCKING=0
+      - CUDA_CACHE_DISABLE=0
+      
+      # Performance Tuning
+      - PYTHONUNBUFFERED=1
+      - TORCH_CUDNN_V8_API_ENABLED=1
     healthcheck:
       # Healthcheck needs to target port 8000 inside the container
       test: [ "CMD", "curl", "-f", "http://localhost:8000/", "||", "exit", "1" ]
@@ -25,26 +39,24 @@ services:
       - deep-rag
 
   # 2. Define the CPU service extending the base
-  normalized-semantic-chunker-cpu:
+  cpu:
     extends:
       service: base-service
-    image: normalized-semantic-chunker:latest # Using base image
-    container_name: normalized-semantic-chunker-cpu # More specific name
+    container_name: normalized-semantic-chunker-cpu 
     profiles:
       - cpu
     ports:
-      - "8000:8000" # Add ports here
+      - "${APP_PORT:-8000}:8000" 
 
   # 3. Define the GPU service extending the base
-  normalized-semantic-chunker-gpu:
+  gpu:
     extends:
       service: base-service
-    image: normalized-semantic-chunker:latest # Using base image
     container_name: normalized-semantic-chunker-gpu
     profiles:
       - gpu
     ports:
-      - "8000:8000" # Add ports here
+      - "${APP_PORT:-8000}:8000" 
     deploy:
       resources:
         reservations:
