Add VLLM-MIGRATION-PLAN.md to .gitignore for infrastructure details

--- a/.gitignore
+++ b/.gitignore
@@ -83,3 +83,6 @@ yarn-error.log*
 # Local configuration
 config.local.yaml
 .env.local
+
+# Migration plan (contains infrastructure details)
+VLLM-MIGRATION-PLAN.md
