--- a/docker/requirements.txt
+++ b/docker/requirements.txt
@@ -1,11 +1,8 @@
-fastapi>=0.109.0
-uvicorn[standard]>=0.30.0
-sentence-transformers>=4.1.0
-tiktoken>=0.5.2
-numpy<2.0.0,>=1.24.0
-pydantic>=2.5.0
-python-multipart>=0.0.6 
---extra-index-url https://download.pytorch.org/whl/cu126
-torch==2.6.0+cu126
-psutil>=5.9.5
-httpx>=0.27.0
+fastapi>=0.128.0
+uvicorn[standard]>=0.40.0
+tiktoken>=0.12.0
+numpy>=2.0.0
+pydantic>=2.12.0
+python-multipart>=0.0.22
+psutil>=7.2.0
+httpx>=0.28.0
