--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,11 @@
 requests>=2.31.0
-fastapi>=0.109.0
-uvicorn[standard]>=0.30.0
-sentence-transformers>=4.1.0
-tiktoken>=0.5.2
---extra-index-url https://download.pytorch.org/whl/cu126
-torch==2.6.0+cu126
-torchvision==0.21.0+cu126
-torchaudio==2.6.0+cu126
-numpy<2.0.0,>=1.24.0
-pydantic>=2.5.0
-python-multipart>=0.0.6
+fastapi>=0.128.0
+uvicorn[standard]>=0.40.0
+tiktoken>=0.12.0
+numpy>=2.0.0
+pydantic>=2.12.0
+python-multipart>=0.0.22
 pytest>=8.3.4
-httpx>=0.21.1
+httpx>=0.28.0
 pytest-asyncio>=0.21.0
-psutil>=5.9.5
+psutil>=7.2.0
